--- a/ContactName/Base.lproj/Main.storyboard
+++ b/ContactName/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="KKl-lr-A5h">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="KKl-lr-A5h">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -35,6 +35,11 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="4ky-l4-FZR">
+                        <barButtonItem key="leftBarButtonItem" title="Show" id="MvR-5N-awP">
+                            <connections>
+                                <segue destination="47S-S6-UOW" kind="show" id="eu6-v4-u5u"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Add" id="OFD-Sw-rTt">
                             <connections>
                                 <action selector="addName:" destination="BYZ-38-t0r" id="8hq-3K-iDy"/>
@@ -49,6 +54,39 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="833" y="24"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="jvM-XD-ry0">
+            <objects>
+                <viewController id="47S-S6-UOW" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="uof-oV-34m"/>
+                        <viewControllerLayoutGuide type="bottom" id="CY1-PK-8dS"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="bVv-FN-uif">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="r9A-e5-gRA">
+                                <rect key="frame" x="40" y="100" width="240" height="128"/>
+                                <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="r9A-e5-gRA" firstAttribute="top" secondItem="uof-oV-34m" secondAttribute="bottom" constant="36" id="hkq-vJ-c3n"/>
+                            <constraint firstItem="r9A-e5-gRA" firstAttribute="centerX" secondItem="bVv-FN-uif" secondAttribute="centerX" id="i5C-PP-kl7"/>
+                            <constraint firstItem="CY1-PK-8dS" firstAttribute="top" secondItem="r9A-e5-gRA" secondAttribute="bottom" constant="340" id="net-Du-vcT"/>
+                            <constraint firstItem="r9A-e5-gRA" firstAttribute="leading" secondItem="bVv-FN-uif" secondAttribute="leadingMargin" constant="24" id="sKR-qj-LHd"/>
+                        </constraints>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="c1k-dn-W0H" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1246" y="24"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="qcC-9b-0Is">
